Fix navigation on mobile to desktop

--- a/pattern-library/src/assets/toolkit/styles/toolkit.scss
+++ b/pattern-library/src/assets/toolkit/styles/toolkit.scss
@@ -587,11 +587,11 @@ button:hover, button:focus, button:active {
  * $FOOTER
  * -----------------------------------------------------------------------------
  */
-.footer .copyright {
+footer .copyright {
   display: block;
 }
-@media all and (min-width: 768px) {
-  .footer .copyright {
+@media all and (min-width: 1024px) {
+  footer .copyright {
     display: none;
   }
 }
@@ -634,7 +634,7 @@ header {
   align-items: flex-start;
   padding: 2rem 1rem;
 }
-@media all and (min-width: 768px) {
+@media all and (min-width: 1024px) {
   header {
     display: block;
     padding: 2rem;
@@ -649,7 +649,7 @@ header label {
   display: inline-block;
   cursor: pointer;
 }
-@media all and (min-width: 768px) {
+@media all and (min-width: 1024px) {
   header label {
     display: none;
   }
@@ -669,7 +669,7 @@ header nav {
   min-width: 100%;
   padding-top: 2rem;
 }
-@media all and (min-width: 768px) {
+@media all and (min-width: 1024px) {
   header nav {
     padding-top: 4rem;
   }
@@ -683,7 +683,7 @@ header [type=checkbox]:checked + nav {
 header .copyright {
   display: none;
 }
-@media all and (min-width: 768px) {
+@media all and (min-width: 1024px) {
   header .copyright {
     display: block;
   }
@@ -832,7 +832,7 @@ nav {
   display: none;
   font-size: 1rem;
 }
-@media all and (min-width: 768px) {
+@media all and (min-width: 1024px) {
   nav {
     display: block;
   }
@@ -1261,7 +1261,7 @@ section:after,
  * $LOGO
  * -----------------------------------------------------------------------------
  */
-@media all and (min-width: 768px) {
+@media all and (min-width: 1024px) {
   .logo {
     padding-top: 4rem;
   }
@@ -1279,7 +1279,7 @@ section:after,
   max-width: 100px;
   width: 100%;
 }
-@media all and (min-width: 768px) {
+@media all and (min-width: 1024px) {
   .logo__icon {
     display: block;
   }
@@ -1288,7 +1288,7 @@ section:after,
 .logo__text {
   font-weight: 700;
 }
-@media all and (min-width: 768px) {
+@media all and (min-width: 1024px) {
   .logo__text {
     font-size: 1.825rem;
     text-align: center;
