--- a/styles/base/_header.scss
+++ b/styles/base/_header.scss
@@ -12,7 +12,7 @@ header {
     align-items: flex-start;
     padding: $spacing-default $spacing-small;
 
-    @include bp-min-width($bp-tablet) {
+    @include bp-min-width($bp-desktop) {
         display: block;
         padding: $spacing-default;
 
@@ -30,7 +30,7 @@ header {
 
         cursor: pointer;
 
-        @include bp-min-width($bp-tablet) {
+        @include bp-min-width($bp-desktop) {
             display: none;
         }
 
@@ -55,7 +55,7 @@ header {
         min-width: 100%;
         padding-top: $spacing-default;
 
-        @include bp-min-width($bp-tablet) {
+        @include bp-min-width($bp-desktop) {
             padding-top: $spacing-large;
         }
 
@@ -73,7 +73,7 @@ header {
     .copyright {
         display: none;
 
-        @include bp-min-width($bp-tablet) {
+        @include bp-min-width($bp-desktop) {
             display: block;
         }
     }
