--- a/styles/base/_nav.scss
+++ b/styles/base/_nav.scss
@@ -9,7 +9,7 @@ nav {
 
     font-size: $font-size-small;
 
-    @include bp-min-width($bp-tablet) {
+    @include bp-min-width($bp-desktop) {
         display: block;
     }
 
